--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,26 @@ html {
     background-color: gray;
 }
 
+.container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: minmax(150px, auto);
+    grid-template-areas: 
+        "header" 
+        "nav" 
+        "main";
+}
+
 header {
     background-color: #7477BF;
+    grid-area: header;
 }
 
 nav {
     background-color: #4D4B72;
+    grid-area: nav;
+}
+
+main {
+    grid-area: main;
 }
