--- a/styles.css
+++ b/styles.css
@@ -2,66 +2,22 @@
     box-sizing: border-box;
 }
 
+
 body {
     padding: 0;
     margin: 0;
 }
 
-.container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-auto-rows: minmax(150px, auto);
-    grid-template-areas: 
-        "header" 
-        "nav" 
-        "main";
+ul {
+    list-style-type: none;
 }
 
 header {
     font-size: 1.4em;
     background-color: #7477BF;
-    grid-area: header;
     color: white;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: 
-        "app-name app-name app-name" 
-        "icon avatar user-name";
-}
-
-.app-name {
-    grid-area: app-name;
-    text-align: center;
-}
-
-.header-icon {
-    width: 40px;
-    grid-area: icon;
-}
-
-.avatar {
-    width: 40px;
-    grid-area: avatar;
-}
-
-
-
-.user-name {
-    grid-area: user-name;
-    font-size: 20px;
-}
-
-nav {
-    background-color: #4D4B72;
-    grid-area: nav;
-    text-align: center;
-}
-
-.nav-icon {
-    width: 15%;
 }
 
 main {
-    grid-area: main;
     text-align: center;
 }
