--- a/css/grid.css
+++ b/css/grid.css
@@ -1,4 +1,20 @@
 .container {
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-areas: 
+        "header"
+        "nav"
+        "main";
+}
+
+header {
+    grid-area: header;
+}
+
+nav {
+    grid-area: nav;
+}
+
+main {
+    grid-area: main;
 }
