--- a/css/styles.css
+++ b/css/styles.css
@@ -25,32 +25,33 @@ header {
     float: left;
 }
 
-.header-bar .header-icon {
+.header-icon {
     display: block;
-    padding-right: 20px;
+    position: absolute;
+    right: 255px;
+    top: 0;
+    width: 35px;
     border-right: 2px solid rgba(255,255,255,0.1);
-    margin-right: 0;
+}
+
+li {
+    padding: 5px 0 5px 0;
+}
+
+.avatar {
     width: 40px;
     position: absolute;
-    right: 120px;
+    right: 200px;
+    top: 0;
 }
 
-.header-bar .avatar {
-    display: block;
+.user-name {
+    display: inline-block;
     float: right;
-    width: 40px;
+    position: absolute;
+    right: 50px;
+    top: 0;
 }
-
-.header-bar .user-name {
-    display: block;
-    float: right;
-    justify-content: flex-end;
-}
-
-.header-bar li {
-    padding: 5px 10px 10px 10px;
-}
-
 
 
 nav {
