--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,6 @@ ul {
 
 header {
     min-height: 30px;
-    padding: 10px;
     font-size: 1.4em;
     background-color: #7477BF;
     color: white;
@@ -28,8 +27,8 @@ header {
 .header-icon {
     display: block;
     position: absolute;
-    right: 255px;
-    top: 0;
+    right: 220px;
+    top: 15px;
     width: 35px;
     border-right: 2px solid rgba(255,255,255,0.1);
 }
@@ -41,8 +40,8 @@ li {
 .avatar {
     width: 40px;
     position: absolute;
-    right: 200px;
-    top: 0;
+    right: 165px;
+    top: 10px;
     border-radius: 100%;
 }
 
@@ -50,8 +49,8 @@ li {
     display: inline-block;
     float: right;
     position: absolute;
-    right: 50px;
-    top: 0;
+    right: 20px;
+    top: 15px;
 }
 
 
