--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ header {
     border-right: 2px solid rgba(255,255,255,0.1);
 }
 
-li {
+.header-bar li {
     padding: 5px 0 5px 0;
 }
 
@@ -65,6 +65,11 @@ li {
 
 nav {
     background-color: #4d4b72;
+}
+
+.nav-icon {
+    display: block;
+    width: 50px;
 }
 
 main {
