--- a/css/styles.css
+++ b/css/styles.css
@@ -103,3 +103,11 @@ input[id="search"] {
 #dashboard {
     font-weight: lighter;
 }
+
+#alert {
+    margin: 0 auto;
+    padding: 10px;
+    background-color: #7377BF;
+    color: white;
+    width: 90%;
+}
