--- a/css/styles.css
+++ b/css/styles.css
@@ -113,19 +113,17 @@ input[id="search"] {
 
 /* Social Media Widgets */
 
-.twitter-widget {
+.sm-widget {
+    display: block;
+    margin: 0 auto;
     border:2px solid #d6d6d6;
     border-radius: 5px;
+    max-width: 95%;
 }
 
-.facebook-widget {
-    border: 2px solid #d6d6d6;
-}
-
-.google-widget {
-    border: 2px solid #d6d6d6;
-}
 .sm-icon-bg {
+    display: inline-block;
+    float: left;
     background-color: #7377BF;
     width: 65px;
     height: 65px;
@@ -139,11 +137,13 @@ input[id="search"] {
 }
 
 .sm-name {
+    text-align: left;
     color: #7377BF;
     margin-bottom: 0;
 }
 
 .sm-numbers {
+    text-align: left;
     font-size: 60px;
     margin-top: 0;
 }
