--- a/css/styles.css
+++ b/css/styles.css
@@ -263,7 +263,7 @@ textarea[id="message"] {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #7377BF;
     -webkit-transition: .4s;
     transition: .4s;
 }
